Connected Stylesheet to html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel = "stylesheet" href = "styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <h1>Welcome to our gallery</h1>
     <p>Hover on any thumbnail to see it bigger</p>
-    <div id="thumb-bar"> </div>
+    <div id="thumb-bar"></div>
     <img class="displayed-img">
     <label>What effect do you want to apply?</label>
     <input id="effect" type="text">
