Connected html with javascript

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <label>What effect do you want to apply?</label>
     <input id="effect" type="text">
     <button>Submit</button>
+    <script src='app.js'></script>
 </body>
 
 </html>
