Fixed some minor formatting errors

--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
 </head>
 
 <body>
-    <h1>Welcome to our gallery</h1>
+    <header>
+        <h1>Welcome to our gallery</h1>
+    </header>
     <p>Hover on any thumbnail to see it bigger</p>
     <div id="thumb-bar"></div>
     <img class="displayed-img">
     <label>What effect do you want to apply?</label>
-    <input id="effect" type="text">
-    <button>Submit</button>
-    <script src='app.js'></script>
+    <footer>
+        <input id="effect" type="text">
+        <button>Submit</button>
+        <script src='app.js'></script>
+    </footer>
 </body>
 
 </html>
